objects/Royall_Program__c.object
<CustomObject>
    <description>Used to track the programs that can be offered to a client.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Program_Package__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID (for project)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Program_Deployment_Date_R__c</fullName>
        <label>Actual Program Deployment Date (R)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Program_Shutdown_Date_R__c</fullName>
        <label>Actual Program Shutdown Date (R)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity_DW__c</fullName>
        <description>This number represents a roll-up of the actual contact quantities from Data Warehouse (DW) -- per Program</description>
        <inlineHelpText>This represents roll-up of the actual contact quantities from Data Warehouse (DW) -- per Program</inlineHelpText>
        <label>Actual Quantity (DW)</label>
        <summarizedField>Program_Project__c.Contact_Quantity__c</summarizedField>
        <summaryForeignKey>Program_Project__c.Program_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Cost_Per_Thousand__c</fullName>
        <inlineHelpText>Cost per thousand as found on your contract</inlineHelpText>
        <label>Additional Cost Per Thousand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This repeat program is at risk or being declined.</description>
        <inlineHelpText>Only check this box for repeat programs that a client is at risk of NOT repeating.</inlineHelpText>
        <label>Program At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_New__c</fullName>
        <label>Campaign (New)</label>
        <picklist>
            <controllingField>Target_Audience_New__c</controllingField>
            <picklistValues>
                <fullName>Advancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eQual - Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eQual - Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Year Persistence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad Application Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad eQual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad Web App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardwick Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open House/Regional Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Grad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Sophomore/Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously Purchased Seniors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royall Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Jumpstart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Search/PRE Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgentgram</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_SubType__c</fullName>
        <label>Campaign: Sub-Type</label>
        <picklist>
            <controllingField>Campaign_New__c</controllingField>
            <picklistValues>
                <fullName>AM: IP Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM: New Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM: PRE Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE: IP Name (Client-Provided)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE: IP Name (Royall-Generated)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE: New Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE: PRE Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS/PRE: New Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS/PRE: PRE Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YE: Affordability Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YE: Deposit IQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YE: Quick Pay</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <inlineHelpText>Campaign engaged with client for this program.  &quot;Standard&quot; programs imply that both paper and email are used.</inlineHelpText>
        <label>Campaign</label>
        <picklist>
            <controllingField>Target_Audience__c</controllingField>
            <picklistValues>
                <fullName>Admitted Student Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Driver mailing to Inquiry Pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - End of School Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - e-only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Inquiry Pool Electronic Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Inquiry Pool Paper &amp; Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - New Name Sr. Search Fulfillment Electronic Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - New Name Sr. Search Fulfillment Paper &amp; Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications - Blank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - SNR Sr. Search Fulfillment Electronic Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - SNR Sr. Search Fulfillment Paper &amp; Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Transfer e-only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Transfer Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Application Marketing - e-only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Application Marketing - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of School Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eQual - Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eQual - Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eQual - Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAFSA Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment - e-only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment to Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Boost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Inquiry Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keying</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Lost_To__c</fullName>
        <description>Indicates the competitor that will manage the program when Royall &amp; Company&apos;s service is declined.</description>
        <inlineHelpText>Please indicate the competitor that will manage the program when Royall &amp; Company&apos;s service is declined.</inlineHelpText>
        <label>Competitor Lost To</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alloy Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EducationDynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Engine Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hutchinson Allgood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LF O’Connell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mindpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noel-Levitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RuffaloCODY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spectrum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stamats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TargetX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Zen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Way Better Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Quantity__c</fullName>
        <inlineHelpText>Contact quantity for this campaign at the proposed or final invoiced stage.</inlineHelpText>
        <label>Contact Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <inlineHelpText>Date contract for this program was sent to the client</inlineHelpText>
        <label>Contract Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signature_Date__c</fullName>
        <description>Date contract is signed.</description>
        <inlineHelpText>Date contract is signed.</inlineHelpText>
        <label>Contract Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declined_Date__c</fullName>
        <label>Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_Only_Marketing_R__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-Only Marketing (R)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <formula>Program_Cost__c *  Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>Program_Package__r.Fiscal_Year__c</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Data_Load__c</fullName>
        <description>Identity that ties back to the row number in the spreadsheet that Kevin Ross supplied to load the fiscal years 2007-2009.  This field will be deleted once the load is complete and verified.</description>
        <inlineHelpText>Identity that ties back to the row number in the spreadsheet that Kevin Ross supplied to load the fiscal years 2007-2009.  This field will be deleted once the load is complete and verified.</inlineHelpText>
        <label>Historical Data Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Number_test__c</fullName>
        <formula>Program_Package__r.Account__r.r_School_Code__c &amp;&quot;-&quot; &amp;Program_Package__r.Fiscal_Year__c &amp;&quot;-&quot;&amp; TEXT (Campaign_New__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Cost__c</fullName>
        <inlineHelpText>List cost for this campaign at proposed or final invoiced stage</inlineHelpText>
        <label>List Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lock_the_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock the Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_year_Contract_R__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-year Contract (R)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Important facts about the campaign</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Deployment_Date_R__c</fullName>
        <label>Planned Deployment Date (R)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Shutdown_Date_R__c</fullName>
        <label>Planned Shutdown Date (R)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postage_Cost_SS_New__c</fullName>
        <label>Postage Cost (SS-New)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postage_Cost_SS_PRE__c</fullName>
        <label>Postage Cost (SS-PRE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postage_Cost_Total__c</fullName>
        <formula>/*Postage_Cost_SS_New__c + */Postage_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postage Cost (Total$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postage_Cost__c</fullName>
        <inlineHelpText>Cost of postage for this campaign at the proposed or final invoiced stage</inlineHelpText>
        <label>Postage Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <inlineHelpText>Probability of the client engaging this campaign</inlineHelpText>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probable_Revenue__c</fullName>
        <description>Calculates the probable revenue based on the SL&apos;s estimated probability the program will convert. ($) Program_Cost__c * (%) Probability__c = Probable Revenue</description>
        <formula>Program_Cost__c *  Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the probable revenue based on the SL&apos;s estimated probability the program will convert.
($) Program_Cost__c * (%) Probability__c = Probable Revenue</inlineHelpText>
        <label>Probable Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Cost_SS_New__c</fullName>
        <label>Program Cost (SS-New)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Cost_SS_PRE__c</fullName>
        <label>Program Cost (SS-PRE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Cost_Total__c</fullName>
        <formula>/*Program_Cost_SS_New__c + */Program_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Cost (Total$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Cost__c</fullName>
        <inlineHelpText>Total cost to the client for this program</inlineHelpText>
        <label>Program Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Package__c</fullName>
        <label>Program Package</label>
        <referenceTo>Program_Package__c</referenceTo>
        <relationshipLabel>Programs (Royall)</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposal_Approved__c</fullName>
        <inlineHelpText>Date the proposal for this program was approved by the client</inlineHelpText>
        <label>Proposal Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent__c</fullName>
        <inlineHelpText>Date the proposal was sent to the client for this program</inlineHelpText>
        <label>Proposal Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QTY_AM_IP_Name__c</fullName>
        <label>QTY (AM:IP Name)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTY_AM_PRE_Name__c</fullName>
        <label>QTY (AM:PRE Name)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTY_AM_new_name__c</fullName>
        <label>QTY (AM:New Name)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTY_SE_IP_Name_Client__c</fullName>
        <label>QTY (SE:IP Name-Client)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTY_SE_IP_Name_Royall__c</fullName>
        <label>QTY (SE:IP Name-Royall)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTY_SE_New_Name__c</fullName>
        <label>QTY (SE:New Name)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTY_SE_PRE_Name__c</fullName>
        <label>QTY (SE:PRE Name)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTY_SS_New_Name__c</fullName>
        <label>QTY (SS:New Name)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTY_SS_PRE_Name__c</fullName>
        <label>QTY (SS:PRE Name)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retargeting__c</fullName>
        <label>Retargeting</label>
        <picklist>
            <controllingField>Campaign_New__c</controllingField>
            <picklistValues>
                <fullName>Retargeting (Search)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*N/A*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retargeting (Application)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signature_Type__c</fullName>
        <inlineHelpText>How did the client commit to engaging on this campaign?</inlineHelpText>
        <label>Signature Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract - PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract - Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract - Royall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>•	Contracted – We have a signed contract for the core program.  For upsells, we have either email or verbal approval.

•	Pending Signature – We have sent a contract to the client and are awaiting signature.

•	Proposed – The program has been proposed to the client and will likely be approved; however, a contract has not yet been drafted.

•	Forecasted (Probability Adjusted) – The program has been discussed and/or proposed to the client; however, we are not 100% confident that it will be approved at this level.  A probability of less than 100% has been assigned to this program.

•	Declined – We discussed and/or proposed a program that the client declined.</description>
        <inlineHelpText>Where does the conversation stand for this program?</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Audience_New__c</fullName>
        <label>Target Audience (New)</label>
        <picklist>
            <picklistValues>
                <fullName>Advancement Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undergrad Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <inlineHelpText>Group of individuals being contacted within the campaign.</inlineHelpText>
        <label>Target Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Sophomore/Junior Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Deployment__c</fullName>
        <description>Date the program is targeted to deploy.</description>
        <inlineHelpText>Date the program is targeted to deploy.</inlineHelpText>
        <label>Target Deployment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>How this campaign was originated (Re-engagement, Up-sell, Cross-sell, or Final Invoice Adjustment)</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Re-engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up-sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Business transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final invoice adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Program (Royall)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_Signature_only_CFY</fullName>
        <columns>Fiscal_Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Campaign_New__c</columns>
        <columns>Target_Audience_New__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Contact_Quantity__c</columns>
        <columns>Actual_Quantity_DW__c</columns>
        <columns>Proposal_Sent__c</columns>
        <columns>Probable_Revenue__c</columns>
        <columns>Expected_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Signature</value>
        </filters>
        <label>&apos;Pending Signature&apos; stage only (CFY)</label>
    </listViews>
    <nameField>
        <label>Job Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs (Royall)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Campaign_Equals_Web_Application_Req</fullName>
        <active>true</active>
        <description>IF Campaign (New) = “Web Application” Contact Quantity must be &lt; 20</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Campaign_New__c, &quot;Web Application&quot;),  
OR(ISBLANK(Contact_Quantity__c ), Contact_Quantity__c &gt;= 20 )
)</errorConditionFormula>
        <errorMessage>If Campaign (New) is equal to “Web Application”, then the Contact Quantity must be &lt; 20</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Equals_eQual_Req</fullName>
        <active>false</active>
        <description>Per A.Sutton: 1.20.16 &apos;..change this to remove the ERROR message when the “campaign (new)” type is “eQual”?..&apos;</description>
        <errorConditionFormula>AND( 
BEGINS(TEXT(Campaign_New__c),  &quot;eQual&quot;) ,  
OR(ISBLANK(Contact_Quantity__c ),Contact_Quantity__c &lt;= 20)
)</errorConditionFormula>
        <errorMessage>If the Campaign (New) starts with ‘eQual’, then Contact Quantity must be &gt; 20</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_the_Record_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$Profile.Name != &apos;System Administrator&apos;,
	NOT(ISCHANGED(Actual_Quantity_DW__c)),
	AND(
	    Lock_the_Record__c,
	    NOT(ISCHANGED(Lock_the_Record__c))
	)
)</errorConditionFormula>
        <errorMessage>This Record is locked and cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Status_Contracted_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Status__c ,&quot;Contracted&quot;), 
 OR(
  ISBLANK( Contract_Sent__c ),
  ISBLANK( Proposal_Sent__c ),
  ISBLANK(Contract_Signature_Date__c )
 )
)</errorConditionFormula>
        <errorDisplayField>Actual_Program_Deployment_Date_R__c</errorDisplayField>
        <errorMessage>When program status is &quot;Contracted&quot;, the contract sent date, proposal sent date, and signature date is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Status_Declined_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Status__c ,&quot;Declined&quot;), 
 OR(
  ISBLANK( Declined_Date__c ),
  ISBLANK( Proposal_Sent__c )
 )
)</errorConditionFormula>
        <errorMessage>When program status is &quot;Declined&quot;, the declined date and proposal sent date is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Status_Opportunity_Req</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Status__c ,&quot;Opportunity&quot;),
 ISBLANK(Probability__c) 
)</errorConditionFormula>
        <errorDisplayField>Probability__c</errorDisplayField>
        <errorMessage>When program status is &quot;Opportunity&quot;, the probability is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Status_Pending_Signature_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Status__c ,&quot;Pending Signature&quot;), 
 OR(
  ISBLANK( Contract_Sent__c ),
  ISBLANK( Proposal_Sent__c )
 )
)</errorConditionFormula>
        <errorMessage>When program status is &quot;Pending Signature&quot;, the contract sent date and proposal sent date is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Status_Proposed_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Status__c ,&quot;Proposed&quot;), 
 OR(
  ISBLANK(Probability__c),
  ISBLANK( Proposal_Sent__c )
 )
)</errorConditionFormula>
        <errorMessage>When program status is &quot;Proposed&quot;, the probability and proposal sent date is required.</errorMessage>
    </validationRules>
</CustomObject>